@@ -274,9 +274,14 @@
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
                 --add-exports com.azure.core/com.azure.core.implementation.serializer.jackson=ALL-UNNAMED
                 --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+                --add-opens com.azure.storage.common/com.azure.storage.common.implementation=ALL-UNNAMED
+                --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation.util=ALL-UNNAMED
+                --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation=ALL-UNNAMED
                 --add-opens com.azure.storage.file.datalake/com.azure.storage.file.datalake=ALL-UNNAMED
                 --add-opens com.azure.storage.file.datalake/com.azure.storage.file.datalake.implementation=ALL-UNNAMED
+                --add-opens com.azure.storage.file.datalake/com.azure.storage.file.datalake.implementation.util=ALL-UNNAMED
                 --add-opens com.azure.storage.file.datalake/com.azure.storage.file.datalake.models=ALL-UNNAMED
+                --add-opens com.azure.storage.file.datalake/com.azure.storage.file.datalake.specialized=ALL-UNNAMED
                 --add-reads com.azure.core=ALL-UNNAMED
                 --add-reads com.azure.core.test=ALL-UNNAMED
                 --add-reads com.azure.core.amqp=ALL-UNNAMED
